# mandlebrot-rs

./: .gitignore  Cargo.toml  README.md  index.html  points.txt
explore/: index.html  main.js  package-lock.json  package.json
src/: lib.rs  main.rs
