[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Jason <jabrady42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
image = "0.22.3"
threadpool = "1.7.1"
structopt = "0.3"
structopt-derive = "0.3.5"
rug = "0.6.0"

# Util
actix-web = "1.0"
serde = "1.0.103"
image-base64 = "0.1.0"
